# taskbar_interface

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: main.yml
examples/: attention.rs  progress.rs
src/: lib.rs
src/linux/: mod.rs  unity.rs  xapps.rs
src/windows/: mod.rs
windows_bindings/: build.rs
