[package]
name = "taskbar_interface"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raw-window-handle = "0"

[target.'cfg(all(unix, not(target_os="macos")))'.dependencies]
lazy_static = "1"
x11-dl = "2"
dbus = "0.9"
x11rb = { version = "0.9", features = ["allow-unsafe-code", "dl-libxcb"] }

[target.'cfg(target_os = "windows")'.dependencies]
bindings = { path = "./windows_bindings" }

[dev-dependencies]
winit = "0.25"
glutin = "0.27"