[package]
name = "taskbar_interface"
version = "0.1.0"
edition = "2018"
license = "MIT"
description = "An interface to the desktop taskbar"
documentation = "https://docs.rs/taskbar_interface"
repository = "https://github.com/sandmor/taskbar_interface"
readme = "README.md"
keywords = ["taskbar", "interfaces", "ui"]
categories = ["gui"]

[dependencies]
raw-window-handle = "0"

[target.'cfg(all(unix, not(target_os="macos")))'.dependencies]
lazy_static = "1"
x11-dl = "2"
dbus = "0.9"
x11rb = { version = "0.9", features = ["allow-unsafe-code", "dl-libxcb"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = "0.19"

[target.'cfg(target_os = "windows")'.build-dependencies]
windows = "0.19"

[dev-dependencies]
winit = "0.25"
glutin = "0.27"
